--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="preston.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="79692daf-7a0f-4ec6-855a-78c47f756f9e.JPG" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,26 +25,26 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Preston Lim</p>
-					<p class="text-title-company">Associate Software Engineer</p>
-					<p class="text-title-company">Data Science Division, GovTech</p>
+					<p class="text-name">Zen Zhao</p>
+					<p class="text-title-company">Executive Director</p>
+					<p class="text-title-company">Luminous MSL</p>
 				</div>
 				<div class="col">
-					<img src="assets/govtech-logo-blue.svg" alt="Company Logo">
+					<img src="Luminous-MSL_logo---01.png" alt="Company logo">
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:preston@data.gov.sg">
+		<a href="mailto:zen.zhao@luminous-asia.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">preston@data.gov.sg</p>
+						<p class="text-detail">zen.zhao@luminous-asia.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+6591234567">
+		<a href="tel:+6594294388">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+65) 9123 4567</p>
+						<p class="text-detail">(+65) 94294388</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,14 +73,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.tech.gov.sg">
+		<a href="https://www.luminous-asia.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">tech.gov.sg</p>
+						<p class="text-detail">luminous-asia.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -91,15 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com.sg/maps/place/GovTech+Hive/@1.2998708,103.7871504,17z/
-		data=!3m1!4b1!4m5!3m4!1s0x31da1a457344a501:0x2202a995a6abc728!8m2!3d1.2998708!4d103.7893391">
+		<a href="https://www.google.com.sg/maps/place/16+Collyer+Quay/@1.284224,103.8504143,17z/data=!3m1!4b1!4m5!3m4!1s0x31da190eccffe3cd:0x94708c4b3fd58ba9!8m2!3d1.2842186!4d103.852603">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">1 Fusionopolis, Sandcrawler, #09-01, 138577</p>
+						<p class="text-detail">16 Collyer Quay #03-00 Income at Raffles Singapore 049318</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
