--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="79692daf-7a0f-4ec6-855a-78c47f756f9e.JPG" alt="Profile Picture">
+					<img class="profile-pic" src="zenzhao.jpeg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
